shiro 动态控制基本完成，还剩一些简单的删改操作未完成 数据库数据要根据实际路径配置 仅实现了Role授权认证，如果需要Perm授权认证，建个PermFilter实现下即可，和RoleFilter差不多

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>ebook-common</module>
         <module>ebook-user</module>
+        <module>ebook-gateway</module>
     </modules>
 
     <properties>
