--- a/ebook-user/pom.xml
+++ b/ebook-user/pom.xml
@@ -3,17 +3,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <artifactId>ebook-user</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>ebook-user</name>
+    <description>ebook-user</description>
 
     <parent>
         <artifactId>ebook</artifactId>
         <groupId>com.ncu</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <description>Demo project for Spring Boot</description>
+
 
     <properties>
         <java.version>1.8</java.version>
